--- a/src/views/welcome.pug
+++ b/src/views/welcome.pug
@@ -23,7 +23,7 @@ block content
                     input.xd-button.primary(type="submit", value="ログイン")
 
     section.xd-hstack
-        +serverInfo()
+        +ranking()
         .xd-card
             .header
                 h1.title 開発者
