--- a/src/views/ranking.pug
+++ b/src/views/ranking.pug
@@ -5,4 +5,8 @@ block content
         h1: a(href="/") みす廃あらーと
         section
             h2 みす廃ランキング
+            details
+                summary これは何？
+                p みす廃ランキングは、独自に算出された「<strong>みす廃レート</strong>」の高い順ランキングです。毎日みす廃あらーとが発行される度に更新されます。
+                p みす廃レートは、登録日からの経過日数およびノート数から算出されます。
             +rankingTable
