--- a/src/views/welcome.pug
+++ b/src/views/welcome.pug
@@ -7,23 +7,22 @@ block content
         when 'optout'
             .xd-alert.danger: strong 連携を解除しました。
     .xd-card
-        h1: a(href="/") みす廃あらーと
+        h1
+            a(href="/") みす廃あらーと
+            small: a(href="/about") #{version}
         h2= welcomeMessage
-    .xd-hstack
-        section.xd-card
-            p Misskey は楽しいものです。気がついたら1日中入り浸っていることも多いでしょう。
-            p さあ、今すぐみす廃アラートをインストールして、今日のあなたの Misskey 活動を把握しよう。
-        section.xd-card
-            p 始める前に、
-                a(href="/terms") 利用規約
-                | を読んでください。
-            form(action="/login", method="get")
-                .xd-inputs
-                    input.xd-input(type="text" placeholder="ホスト名(例: misskey.io)" name="host" required)
-                    input.xd-button.primary(type="submit", value="ログイン")
-
+    section.xd-card
+        p Misskey は楽しいものです。気がついたら1日中入り浸っていることも多いでしょう。
+        p さあ、今すぐみす廃アラートをインストールして、今日のあなたの Misskey 活動を把握しよう。
+        p 始める前に、
+            a(href="/terms") 利用規約
+            | を読んでください。
+        form(action="/login", method="get")
+            .xd-inputs
+                input.xd-input(type="text" placeholder="ホスト名(例: misskey.io)" name="host" required)
+                input.xd-button.primary(type="submit", value="ログイン")
+    +ranking()
     section.xd-hstack
-        +ranking()
         .xd-card
             .header
                 h1.title 開発者
