--- a/src/views/_components.pug
+++ b/src/views/_components.pug
@@ -10,27 +10,31 @@ mixin ranking()
             p
                 i.fas.fa-users
                 strong 登録者数: !{usersCount}人
-            +rankingTable()
-            p: a(href="/ranking") 全員分見る
+            if state && state.nowCalculating
+                p 現在計算中です。後ほどご確認ください
+            else
+                +rankingTable()
+                p: a(href="/ranking") 全員分見る
 
 mixin rankingTable()
-    table
-        thead: tr
-            th 順位
-            th ユーザー
-            th レート
-        tbody
-            -
-                let rank = 1;
-                let lastRating = '';
-            each rec in ranking
-                - const rating = rec.rating.toFixed(2);
-                tr
-                    td=rank
-                    td: +exta(href="https://" + rec.host + "/@" + rec.username) @!{rec.username}@!{rec.host}
-                    td=rating
+        table
+            thead: tr
+                th 順位
+                th ユーザー
+                th レート
+            tbody
                 -
-                    if (lastRating !== rating) {
-                        rank++;
-                    }
-                    lastRating = rating
+                    let rank = 1;
+                    let lastRating = '';
+                each rec in ranking
+                    - const rating = rec.rating.toFixed(2);
+                    tr
+                        td=rank
+                        td: +exta(href="https://" + rec.host + "/@" + rec.username) @!{rec.username}<wbr/>@!{rec.host}
+                        td=rating
+                    -
+                        if (lastRating !== rating) {
+                            rank++;
+                        }
+                        lastRating = rating
+        
