--- a/src/views/ranking.pug
+++ b/src/views/ranking.pug
@@ -9,4 +9,7 @@ block content
                 summary これは何？
                 p みす廃ランキングは、独自に算出された「<strong>みす廃レート</strong>」の高い順ランキングです。毎日みす廃あらーとが発行される度に更新されます。
                 p みす廃レートは、登録日からの経過日数およびノート数から算出されます。
-            +rankingTable
+            if state.nowCalculating
+                p 現在計算中です。後ほどご確認ください
+            else
+                +rankingTable
