--- a/src/views/_base.pug
+++ b/src/views/_base.pug
@@ -3,7 +3,6 @@ doctype html
 html
     head
         meta(charset="UTF-8")
-        link(href='https://unpkg.com/sanitize.css' rel='stylesheet')
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         block meta
         - const title = 'みす廃アラート'
@@ -16,20 +15,6 @@ html
         meta(name='twitter:card' content='summary')
         meta(name='twitter:site' content='@Xeltica')
         meta(name='twitter:creator' content='@Xeltica')
-        link(rel='stylesheet' href='/assets/style.css')
-        block style
     body
-        .background
-        .xd-container.xd-vstack
-            block content
-            footer
-                .xd-card
-                    a(href="/terms") 利用規約
-                    | ・
-                    +exta(href="https://github.com/Xeltica/misshaialert") リポジトリ
-                    p (C)2020-2021 Xeltica - 
-                        a(href="/about") version #{version}
-                    block footer
-        block script
-        script(defer src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js')
-            
+        #app
+        script(src=`/assets/frontend.${version}.js`)
