--- a/src/views/frontend.pug
+++ b/src/views/frontend.pug
@@ -25,7 +25,7 @@ html
 				align-items: center;
 				justify-content: center;
 			}
-	body
+	body.dark
 		#app: .loading Loading...
 
-		script(src=`/assets/fe.${version}.js`)
+		script(src=`/assets/fe.${version}.js` async defer)
