--- a/src/backend/views/frontend.pug
+++ b/src/backend/views/frontend.pug
@@ -14,6 +14,7 @@ html
 		meta(name='twitter:card' content='summary')
 		meta(name='twitter:site' content='@Xeltica')
 		meta(name='twitter:creator' content='@Xeltica')
+		link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css")
 		style.
 			.loading {
 				display: flex;
@@ -25,7 +26,7 @@ html
 				align-items: center;
 				justify-content: center;
 			}
-	body.dark
+	body
 		#app: .loading Loading...
 
 		script(src=`/assets/fe.${version}.js` async defer)
