--- a/src/frontend/style.scss
+++ b/src/frontend/style.scss
@@ -21,3 +21,15 @@ body {
         transform: none;
     }
 }
+
+.block {
+    display: block !important;
+}
+
+.inline {
+    display: inline !important;
+}
+
+small {
+    font-size: 0.8rem;
+}
