--- a/src/frontend/style.scss
+++ b/src/frontend/style.scss
@@ -6,7 +6,7 @@ body {
 
 .xarticle {
     margin: auto;
-    max-width: 720px;
+    max-width: 1024px;
 }
 
 .fade {
@@ -95,4 +95,33 @@ small {
 }
 
 .login-form {
+}
+
+
+.cat {
+    &:before, &:after {
+        background: #df548f;
+        border: solid 4px currentColor;
+        box-sizing: border-box;
+        content: '';
+        display: inline-block;
+        height: 50%;
+        width: 50%;
+    }
+    &:before {
+        border-radius: 0 75% 75%;
+        transform: rotate(37.5deg) skew(30deg);
+    }
+    &:after {
+        border-radius: 75% 0 75% 75%;
+        transform: rotate(-37.5deg) skew(-30deg);
+    }
+    &.animated:hover {
+        &:before {
+            animation: earwiggleleft 1s infinite;
+        }
+        &:after {
+            animation: earwiggleright 1s infinite;
+        }
+    }
 }
