--- a/src/frontend/style.scss
+++ b/src/frontend/style.scss
@@ -1,5 +1,6 @@
 body {
     --primary: rgb(134, 179, 0);
+    --primary-d: rgb(52, 70, 0);
     --max-width: 1024px;
     font-family: "Koruri", sans-serif;
     font-feature-settings: "pkna";
