--- a/src/frontend/style.scss
+++ b/src/frontend/style.scss
@@ -19,6 +19,15 @@ hr {
     max-width: var(--max-width);
 }
 
+._header {
+    position: sticky;
+    top: var(--container-padding);
+    @media (max-width: 600px) {
+        top: var(--container-padding-phone);
+        padding-right: 16px;
+    }
+}
+
 .fade {
     animation: 0.3s ease-out 0s fadeIn;
     &.down {
@@ -92,6 +101,10 @@ small {
     }
     min-width: min(100vw, 320px);
     max-width: min(100vw, 600px);
+}
+
+.card > .body > h1 {
+    margin-bottom: var(--margin);
 }
 
 .modal-menu-wrapper {
