--- a/src/backend/views/frontend.pug
+++ b/src/backend/views/frontend.pug
@@ -15,7 +15,7 @@ html
 		meta(name='twitter:site' content='@Xeltica')
 		meta(name='twitter:creator' content='@Xeltica')
 		link(rel="stylesheet" href="https://koruri.chillout.chat/koruri.css")
-		link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css")
+		script(src='https://kit.fontawesome.com/c7ab6eba70.js' crossorigin='anonymous')
 		style.
 			.loading {
 				display: flex;
