wip: 開発環境でフロントエンドが動作するように

--- a/apps/backend/public/views/frontend.pug
+++ b/apps/backend/public/views/frontend.pug
@@ -36,4 +36,13 @@ html
 			script.
 				window.__misshaialert = { error: '#{error}' };
 
-		script(src=`/assets/fe.${version}.js` async defer)
+		script(type='module').
+			import RefreshRuntime from 'http://localhost:5173/@react-refresh'
+			RefreshRuntime.injectIntoGlobalHook(window)
+			window.$RefreshReg$ = () => {}
+			window.$RefreshSig$ = () => (type) => type
+			window.__vite_plugin_react_preamble_installed__ = true
+
+
+		script(type='module' src='http://localhost:5173/@vite/client')
+		script(type='module' src='http://localhost:5173/src/init.tsx')
