--- a/apps/backend/public/views/frontend.pug
+++ b/apps/backend/public/views/frontend.pug
@@ -18,7 +18,7 @@ html
 		script(src='https://kit.fontawesome.com/c7ab6eba70.js' crossorigin='anonymous')
 		link(rel="stylesheet", href="/assets/style.css")
 	body
-		#app: .loading Loading...
+		#app
 
 		if token
 			script.
