--- a/packages/backend/public/views/frontend.pug
+++ b/packages/backend/public/views/frontend.pug
@@ -30,7 +30,7 @@ html
 
 		if error
 			script.
-				window.__misshaialert = { error: '#{error}' };
+				window.__tools = { error: '#{error}' };
 
 		script(type='module').
 			import RefreshRuntime from 'http://localhost:5173/@react-refresh'
