fix: フロントエンドにフォントが配送されない問題を修正

--- a/packages/backend/public/views/frontend.pug
+++ b/packages/backend/public/views/frontend.pug
@@ -40,5 +40,5 @@ html
 			window.__vite_plugin_react_preamble_installed__ = true
 
 
-		script(type='module' src='http://localhost:5173/@vite/client')
-		script(type='module' src='http://localhost:5173/src/init.tsx')
+		script(type='module' src='/vite/@vite/client')
+		script(type='module' src='/vite/src/init.tsx')
